tests/toylang/neg/000795_mutation.toylang
program a = { a = sleep a; } .
